--- a/src/style/components/Banner.css
+++ b/src/style/components/Banner.css
@@ -1,6 +1,6 @@
 .banner{
     position: relative;
-    width: 1240px;
+    width: 100%;
     height: 223px;
     margin-left: auto;
     margin-right: auto;
@@ -11,13 +11,13 @@
 
 h1{
     position: absolute;
-    top: 20%;
-    right: 22%;
+    top: 14%;
+    right: 7%;
     color: white;
     z-index: 1;
     font-weight: 500;
-    font-size: 48px;
-    width: 705px;
+    font-size: 200%;
+    width: 88%;
 }
 
 .bannerImg{
@@ -31,4 +31,10 @@ h1{
 
 .blackBaground{
     background: #000000;
+    border-radius: 25px;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 70%;
 }
