--- a/src/style/components/Banner.css
+++ b/src/style/components/Banner.css
@@ -1,17 +1,17 @@
 .banner{
-    position: relative;
+position: relative;
     width: 100%;
-    height: 223px;
+    height: 220px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 4%;
-    border-radius: 25px;
+    margin-bottom: 50px;
     overflow: hidden;
 }
 
 h1{
     position: absolute;
-    top: 14%;
+    top: 30%;
     right: 7%;
     color: white;
     z-index: 1;
@@ -36,5 +36,30 @@ h1{
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    height: 70%;
+    height:100%;
+}
+
+/* max-width = desktop first, si l'ecran est inf ou egal alors {...} */
+/* Media Queries */
+@media screen and (max-width: 992px) {
+    .banner{
+        height: 157px;
+    }
+    .blackBaground{
+        border-radius: 10px;
+    }
+    h1{
+        top: 20%;
+    }
+    
+}
+
+@media screen and (max-width: 576px) {
+h1{
+    top: -2%;
+    text-align: start;
+    left: 3%;
+    width: 55%;
+}
+    
 }
