ajout d'un state pour afficher ou cacher les dropdown

--- a/src/style/components/Collapse.css
+++ b/src/style/components/Collapse.css
@@ -27,9 +27,17 @@
     text-align: start;
     font-weight: 400;
     font-size: 20px;
+    display: block;
 }
 
-.dropDownArrow{
+.hidden{
+    display: none;
+}
+
+.arrow{
+    transform: none;
+}
+
+.open{
     transform: rotate(180deg)
 }
-
