--- a/src/style/components/Banner.css
+++ b/src/style/components/Banner.css
@@ -9,7 +9,7 @@ position: relative;
     overflow: hidden;
 }
 
-h1{
+.bannerTitle{
     position: absolute;
     top: 30%;
     right: 7%;
@@ -48,14 +48,14 @@ h1{
     .blackBaground{
         border-radius: 10px;
     }
-    h1{
+    .bannerTitle{
         top: 20%;
     }
     
 }
 
 @media screen and (max-width: 576px) {
-h1{
+.bannerTitle{
     top: -2%;
     text-align: start;
     left: 3%;
