--- a/src/style/components/Header.css
+++ b/src/style/components/Header.css
@@ -27,7 +27,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 55%;
+    width: 80%;
+    max-width: 309px;
     padding: 0px;
     font-weight: 500;
 }
@@ -35,7 +36,7 @@
 li a{
     color: #FF6060;
     text-decoration-line: none;
-    font-size: 90%;
+    font-size: 24px;
 }
 
 .active{
@@ -50,7 +51,7 @@ li a{
         margin: auto;
     }
     .nav{
-        width: 35%;
+        min-width: 140px;
     }
     .navbar{
         width: 100%;
@@ -64,6 +65,7 @@ li a{
     }
     li a{
         text-transform: uppercase;
+        font-size: 12px;
     }
     
 }
