--- a/src/style/pages/Logement.css
+++ b/src/style/pages/Logement.css
@@ -29,6 +29,12 @@
     justify-content: space-between;
 }
 
+.tagsRatingWrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
 .collapseContainerLogement .dropDownBox{
     width: 47%;
     margin: 15px 0px;
