--- a/src/style/pages/About.css
+++ b/src/style/pages/About.css
@@ -28,7 +28,7 @@
     }
     
     .aboutBody .banner{
-        height: 20vh;
+        height: 223px;
     }
 
     .aboutBody .banner .blackBaground .bannerImg{
