--- a/src/style/components/Banner.css
+++ b/src/style/components/Banner.css
@@ -1,5 +1,5 @@
 .banner{
-position: relative;
+    position: relative;
     width: 100%;
     height: 220px;
     margin-left: auto;
@@ -18,9 +18,10 @@ position: relative;
     font-weight: 500;
     font-size: 200%;
     width: 88%;
+    text-align: center;
 }
 
-.bannerImg{
+.bannerImg {
     opacity: 70%;
     max-width: 100%;
     width: 100%;
@@ -55,11 +56,13 @@ position: relative;
 }
 
 @media screen and (max-width: 576px) {
-.bannerTitle{
-    top: -2%;
-    text-align: start;
-    left: 3%;
-    width: 55%;
-}
+    .bannerTitle{
+        top: 25%;
+        text-align: start;
+        left: 3%;
+        width: 60%;
+        font-size: 18px;
+        padding-left: 10px;
+    }
     
 }
