--- a/src/style/components/Carrousel.css
+++ b/src/style/components/Carrousel.css
@@ -1,32 +1,28 @@
 .carrouselContainer{
     width: 100%;
-    height: 400px;
+    /* height: 400px; */
     margin: 2% auto;
     overflow: hidden;
     border-radius: 25px;
     position: relative;
+    aspect-ratio: 41/13;
 }
 
-/* .slides{
-    width: 100%;
-    height: fit-content;
-    max-height: 415px;
-    
-    
-} */
 
 .slideImg{
-    width: 100%;
-    height: 400px;
-    /* max-height: 415px; */
+    /* width: 100%;
+    height: 400px; */
     border-radius: 25px;
     position: absolute ;
     object-fit: cover;
     opacity: 0;
+    /* object-position: center -135px; */
 }
 
 .current{
     opacity: 1;
+    width: 100%;
+    height: 100%;
 }
 
 .leftArrow{
@@ -49,4 +45,48 @@
 
 .hidden{
     display: none;
+}
+
+/* max-width = desktop first, si l'ecran est inf ou egal alors {...} */
+/* Media Queries */
+@media screen and (max-width: 992px) {
+
+}
+
+@media screen and (max-width: 768px) {
+    .leftArrow img, .rightArrow img{
+        Width: 50%;
+    }
+    .leftArrow{
+        top: 40%;
+        left: -10px;
+    }
+    .rightArrow{
+        top: 40%;
+        right: -10px
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .carrouselContainer{
+        aspect-ratio: 17/13;
+        height: 255px;
+    }
+    .leftArrow{
+        top: 45%;
+        left: -20px;
+    }
+    .rightArrow{
+        top: 45%;
+        right: -20px
+    }
+    .leftArrow img, .rightArrow img{
+        Width: 24%;
+    }
+    .countContainer{
+        display: none;
+    }
+    .slideImg{
+        object-position: 1;
+    }
 }
