--- a/src/style/components/Header.css
+++ b/src/style/components/Header.css
@@ -52,11 +52,21 @@ li a{
     }
     .nav{
         min-width: 140px;
+        width: 30%;
     }
     .navbar{
         width: 100%;
     }
-    
+    li a{
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .nav{
+        min-width: 140px;
+        width: 40%;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -67,5 +77,4 @@ li a{
         text-transform: uppercase;
         font-size: 12px;
     }
-    
 }
