--- a/src/style/components/Tags.css
+++ b/src/style/components/Tags.css
@@ -10,4 +10,30 @@
     background: #FF6060;
     border-radius: 10px;
     padding: 3px 20px;
+    margin: 0;
+}
+
+/* max-width = desktop first, si l'ecran est inf ou egal alors {...} */
+/* Media Queries */
+@media screen and (max-width: 992px) {
+    .tagsContainer p{
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .tagsContainer{
+        gap: 5px;
+    }
+    .tagsContainer p{
+        border-radius: 5px;
+        padding: 3px 8px;
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .tagsContainer p{
+        font-size: 10px;
+    }
 }
