--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -7,16 +7,16 @@
 @import "./base/base";
 @import "./base/typography";
 
-// Components
-@import "./components/buttons";
-@import "./components/cards";
+// // Components
+// @import "./components/buttons";
+// @import "./components/cards";
 
-// Layout
-@import "./layout/header";
-@import "./layout/nav";
-@import "./layout/footer";
-@import "./layout/loader";
+// // Layout
+// @import "./layout/header";
+// @import "./layout/nav";
+// @import "./layout/footer";
+// @import "./layout/loader";
 
 // Pages
-@import "./pages/accueil";
-@import "./pages/menu";
+@import "./pages/homepage";
+// @import "./pages/menu";
