--- a/src/style/sass/base/_typography.scss
+++ b/src/style/sass/base/_typography.scss
@@ -2,6 +2,6 @@
   text-align: left;
 }
 
-.bold { font-weight: 700; }
+.bold { font-weight: 700 !important; }
 
-.thin { font-weight: 500; }
+.thin { font-weight: 500 !important; }
