--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -8,7 +8,7 @@
 @import "./base/typography";
 
 // // Components
-// @import "./components/buttons";
+@import "./components/banner";
 // @import "./components/cards";
 
 // // Layout
