--- a/src/style/sass/pages/_about.scss
+++ b/src/style/sass/pages/_about.scss
@@ -7,8 +7,8 @@
     height: 223px;
     margin: 38px 0;
     
-    .blackBaground .bannerImg{
-      object-position: 100% 50%;
+    .blackBackground .bannerImg{
+      opacity: 70%;
     }
   }
 
@@ -37,7 +37,7 @@
       height: 111px;
       margin: 0 0 20px 0;
       
-      .blackBaground .bannerImg{
+      .blackBackground .bannerImg{
         object-position: 100% 50%;
       }
     }
