--- a/src/style/sass/utils/_mixins.scss
+++ b/src/style/sass/utils/_mixins.scss
@@ -2,6 +2,10 @@
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
+@mixin textShadow {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 @mixin linearGradient {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(10, 10, 10, 0) 42%, rgba(4, 4, 4, 0.205) 99.99%, rgba(0, 0, 0, 0.5) 100%);
 }
