Updating Card component css to scss

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -9,7 +9,7 @@
 
 // // Components
 @import "./components/banner";
-// @import "./components/cards";
+@import "./components/card";
 
 // // Layout
 // @import "./layout/header";
