Updating Carousel component css to scss

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -10,6 +10,7 @@
 // // Components
 @import "./components/banner";
 @import "./components/card";
+@import "./components/carousel";
 
 // // Layout
 // @import "./layout/header";
