--- a/src/style/sass/pages/_lodgment.scss
+++ b/src/style/sass/pages/_lodgment.scss
@@ -1,7 +1,7 @@
 .logementContainer {
   padding: 0px 90px;
   max-width: 1440px;
-  margin: auto;
+  margin: 50px auto;
 
   .infoContainer {
     display: flex;
