Updating Collapse component css to scss

--- a/src/style/sass/pages/_about.scss
+++ b/src/style/sass/pages/_about.scss
@@ -15,9 +15,15 @@
   .collapseContainer {
     max-width: 80%;
     margin: auto;
-
+        
+    .dropDownBtn {
+      font-size: 24px;
+    }
   }
 }
+    
+    
+  
 
 /* Media Queries */
 @media screen and (max-width: 992px) {
