--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./components/banner";
 @import "./components/card";
 @import "./components/carousel";
+@import "./components/collapse";
 
 // // Layout
 // @import "./layout/header";
