--- a/src/style/sass/pages/_lodgment.scss
+++ b/src/style/sass/pages/_lodgment.scss
@@ -39,10 +39,13 @@
     .dropDownBox {
       width: 47%;
       margin: 15px 0px;
+
+      .dropDownBtn {
+        font-size: 18px;
+      }
       
       .boxContent {
         font-size: 18px;
-        color: $black;
         line-height: 25.67px;
       }
     }
