Updating Count component css to scss

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -12,6 +12,7 @@
 @import "./components/card";
 @import "./components/carousel";
 @import "./components/collapse";
+@import "./components/count";
 
 // // Layout
 // @import "./layout/header";
