--- a/src/style/sass/pages/_about.scss
+++ b/src/style/sass/pages/_about.scss
@@ -16,8 +16,12 @@
     max-width: 80%;
     margin: auto;
         
-    .dropDownBtn {
-      font-size: 24px;
+    .dropDownBox {
+      margin-bottom: 30px;
+      
+      .dropDownBtn {
+        font-size: 24px;
+      }
     }
   }
 }
