--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -13,6 +13,7 @@
 @import "./components/carousel";
 @import "./components/collapse";
 @import "./components/count";
+@import "./components/hostInfos";
 
 // // Layout
 // @import "./layout/header";
