--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./components/collapse";
 @import "./components/count";
 @import "./components/hostInfos";
+@import "./components/rating";
 
 // // Layout
 // @import "./layout/header";
