Updating Tags component css to scss

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -15,6 +15,7 @@
 @import "./components/count";
 @import "./components/hostInfos";
 @import "./components/rating";
+@import "./components/tags";
 
 // // Layout
 // @import "./layout/header";
