updating Header component css to scss

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -18,7 +18,7 @@
 @import "./components/tags";
 
 // // Layout
-// @import "./layout/header";
+@import "./layout/header";
 // @import "./layout/nav";
 // @import "./layout/footer";
 // @import "./layout/loader";
