--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -19,9 +19,7 @@
 
 // // Layout
 @import "./layout/header";
-// @import "./layout/nav";
-// @import "./layout/footer";
-// @import "./layout/loader";
+@import "./layout/footer";
 
 // Pages
 @import "./pages/homepage";
