--- a/src/style/sass/components/_banner.scss
+++ b/src/style/sass/components/_banner.scss
@@ -38,7 +38,7 @@
   .banner{
     height: 157px;
     .bannerTitle{
-      top: 20%;
+      top: -10%;
     }
     .blackBackground{
       border-radius: 10px;
@@ -49,7 +49,7 @@
 
 @media screen and (max-width: 576px) {
   .banner {
-    width: 335px;
+    border-radius: 10px;
     height: 111px;
     margin: 17px auto 22px;
     
@@ -57,7 +57,7 @@
       top: 7%;
       text-align: start;
       left: 3%;
-      width: 70%;
+      width: 84%;
       font-size: 24px;
       padding-left: 10px;
     }
